# python-book-eng

./: .buildinfo  Chapter10.html  Chapter2.html  Chapter3.html  Chapter5.html  Chapter7.html  README.md  genindex.html  intro.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/: Chapter9.ipynb
myfirstbook/: Chapter1.ipynb  Chapter10.ipynb  Chapter2.ipynb  Chapter3.ipynb  Chapter4.ipynb  Chapter5.ipynb  Chapter6.ipynb  _toc.yml
myfirstbook/_build/.doctrees/: Chapter1.doctree  Chapter10.doctree  Chapter2.doctree  Chapter3.doctree  Chapter4.doctree  Chapter5.doctree  Chapter6.doctree  Chapter7.doctree  Chapter8.doctree  Chapter9.doctree  environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
myfirstbook/_build/html/: Chapter1.html  Chapter4.html  Chapter6.html  Chapter8.html  Chapter9.html  genindex.html  search.html  searchindex.js
myfirstbook/_build/html/_sources/: Chapter7.ipynb  Chapter8.ipynb
myfirstbook/_build/jupyter_execute/: Chapter1.ipynb  Chapter10.ipynb  Chapter2.ipynb  Chapter3.ipynb  Chapter4.ipynb  Chapter5.ipynb  Chapter6.ipynb  Chapter7.ipynb  Chapter8.ipynb  Chapter9.ipynb  markdown-notebooks.ipynb
